# kinto

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .readthedocs.yaml  .therapist.yml  .travis.yml  CHANGELOG  CHANGELOG.rst  CHANGES.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  README.txt  SECURITY.md  SUPPORT.md  app.wsgi  constraints.in  constraints.txt  contribute.json  cookiecutter.json  cookiecutter.json~  dev-requirements.txt  development.cfg  development.ini  docker-compose.yml  kinto.ps1  lint-requirements.txt  production.ini  pyproject.toml  pytest.ini  pytest_runner-2.9-py2.7.egg  readinglist.ini  requirements.in  requirements.txt  (+10 more)
.env/: cache  db
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: admin.yml  docs.yml  functional.yml  labels.yaml  lint.yml  publish.yml  scheduled.yml  test.yml
Kinto/: .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTORS.rst  Dockerfile  LICENSE  Makefile  app.wsgi  docker-compose.yml  generate_password.py  requirements.txt  setup.cfg  setup.py
Kinto/docs/: concepts.rst  contributing.rst  index.rst
Kinto/kinto/: authorization.py
cliquet/: __init__.py  authentication.py  authorization.py  collection.py  errors.py  events.py  initialization.py  logging.py  logs.py  resource.py  schema.py  statsd.py  utils.py  viewset.py
cliquet/cache/: __init__.py  memory.py  redis.py
cliquet/listeners/: __init__.py  redis.py
cliquet/permission/: __init__.py  memory.py  redis.py
cliquet/resource/: __init__.py  model.py  schema.py  viewset.py
cliquet/scripts/: cliquet.py  init_schema.py
cliquet/session/: __init__.py  postgresql.py  redis.py
cliquet/storage/: __init__.py  cloud_storage.py  exceptions.py  generators.py  memory.py  redis.py  simpleredis.py
cliquet/tests/: support.py  test_authentication.py  test_authorization.py  test_cache.py  test_cors.py  test_deprecation.py  test_errors.py  test_initialization.py  test_listeners.py  test_logging.py  test_permission.py  test_resource.py  test_schema.py  test_schemas.py  test_scripts.py  test_session.py  test_statsd.py  test_storage.py  test_storage_migrations.py  test_storage_pool.py  test_utils.py  test_views_article.py  test_views_batch.py  test_views_errors.py  test_views_heartbeat.py  test_views_hello.py  test_views_logging.py  test_views_oauth.py  test_views_transaction.py  testapp.ini  testapp.py  testappviews.py
cliquet/views/: article.py  batch.py  errors.py  heartbeat.py  hello.py  oauth.py
cliquet_docs/: __init__.py  conf.py  contributing.rst  ecosystem.rst  index.rst  quickstart.rst  rationale.rst  troubleshooting.rst
cliquet_docs/_static/: theme_overrides.css
cliquet_docs/api/: backoff.rst  batch.rst  errors.rst  index.rst  resource.rst  timestamps.rst  utilities.rst  versioning.rst
cliquet_docs/reference/: cache.rst  configuration.rst  errors.rst  glossary.rst  index.rst  installation.rst  listeners.rst  notifications.rst  permission.rst  resource.rst  storage.rst  utils.rst  viewsets.rst
conf/: readinglist.ini
config/: cliquet.ini  dev.ini  kinto-dev.ini  kinto.ini  kinto.ini.sample  kinto.ini~  kinto.tpl  readinglist.ini  template.py  template.py~
config/generate/: kinto.tpl  template.py
cookiecutter-pypackage-minimal/: README.rst  setup.py  tox.ini
cookiecutter-pypackage-minimal/cookiecutter-pypackage-minimal/: __init__.py
debian/: changelog  control  rules
docs/: Makefile  access-control-lists.rst  api.rst  authentication.rst  backoff.rst  batch.rst  buckets.rst  cache.rst  changelog.rst  commandline.rst  community.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  ecosystem.rst  errors.rst  faq.rst  generics.rst  get-started.rst  glossary.rst  index.rst  index.rst~  installation.rst  kinto-admin.rst  kinto-admin.rst~  kinto-plugins-admin.rst  model.rst  overview.rst  permissions.rst  quickstart.rst  rationale.rst  requirements.txt  resource.rst  session.rst  storage.rst  timestamps.rst  troubleshooting.rst  tutorial.rst  (+2 more)
docs/_static/: piwik.js  theme_overrides.css
docs/_templates/: footer.html  indexcontent.html  layout.html
docs/api/: authentication.rst  batch.rst  buckets.rst  collections.rst  deprecation.rst  errors.rst  groups.rst  index.rst  permissions.rst  records.rst  reference.rst  resource.rst  schemas.rst  synchronisation.rst  synchronization.rst  timestamps.rst  utilities.rst  versioning.rst  versionning.rst
docs/configuration/: good-practices.rst  index.rst  installation.rst  (+3 more)
env/: pip-selfcheck.json
generate/: kinto.ini  kinto.tpl  template.py
generator/: MANIFEST.in  README.txt  development.ini~  production.ini  setup.py~
kinto/: Adding_to_kinto.py  __init__.py  __main__.py  authorization.py  events.py  permission.py  schema_validation.py  scripts.py  storage.py  swagger.yaml
kinto.egg-info/: PKG-INFO  SOURCES.txt
kinto_project_2/: __init__.py  routes.py
loadtests/: Makefile  __init__.py  batch_create.json  bench.ini  server.ini  simulation.py  test.ini  testapp.ini
readinglist/: __init__.py  auth.py  authentication.py  decorators.py  errors.py  events.py  exceptions.py  hooks.py  resource.py  run.py  schema.py  schemas.py  settings.py  tests.py  util.py  utils.py  views.py
scripts/: build-kinto-admin.sh  cleanup.py  pull-kinto-admin.sh
tests/: browser.ini  browser.py  functional.ini  functional.py  support.py  test_authorization.py  test_cache_metrics.py  test_config.py  test_init.py  test_main.py  test_scripts.py  test_scripts_rename.py  test_views_admin.py  test_views_buckets.py  test_views_collections.py  test_views_collections_cache.py  test_views_collections_schema.py  test_views_contribute.py  test_views_disable_default.py  test_views_flush.py  test_views_groups.py  test_views_hello.py  test_views_metrics.py  test_views_objects_permissions.py  test_views_permissions.py  test_views_record_schema.py  test_views_records.py  test_views_schema_collection.py  test_views_schema_group.py  test_views_schema_record.py  test_views_swagger.py  test_views_version.py
(+851 files in other folders)
