[metadata]
name = kinto
version = 13.6.2
description = Kinto Web Service - Store, Sync, Share, and Self-Host.
long_description = file: README.rst, CHANGELOG.rst, CONTRIBUTORS.rst
license = Apache License (2.0)
author = Mozilla Services
author_email = storage-team@mozilla.com
url = https://github.com/Kinto/kinto
download_url = https://github.com/Kinto/kinto/tarball/master
keywords = web sync json storage services
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    bcrypt
    colander
    cornice
    cornice_swagger
    dockerflow
    jsonschema>=3.0.0
    jsonpatch
    logging-color-formatter
    python-dateutil
    pyramid<2.0
    pyramid_mailer
    pyramid_multiauth
    transaction
    pyramid_tm
    requests
    waitress
    ujson
tests_require =
    bravado_core
    pytest
    pytest-runner
    WebTest
test_suite = tests

[options.packages.find]
exclude =
    docs
    tests

[options.package_data]
* = *.rst, *.py, *.yaml

[options.entry_points]
paste.app_factory =
    main = kinto:main
console_scripts =
    kinto = kinto.__main__:main

[options.extras_require]
redis =
    kinto_redis
memcached =
    python-memcached
postgresql =
    SQLAlchemy
    psycopg2
    zope.sqlalchemy
monitoring =
    newrelic
    raven
    statsd
    werkzeug

[aliases]
test=pytest

[zest.releaser]
create-wheel = yes
releaser.after_checkout = kinto.plugins.admin.release_hook.after_checkout

[bdist_wheel]
python_tag=cp3

[coverage:run]
branch = True
omit = kinto/plugins/admin/release_hook.py

[flake8]
max-line-length = 99
ignore = E203, E266, E501, W503
exclude = .git,__pycache__,node_modules
